<resources>
    <string name="app_name">TallerLocalizacion</string>
    <string name="button_to_take_picture">Button to take pictire.</string>
    <string name="button_to_see_contacts">button to see contacts.</string>
    <string name="button_to_see_location">Button to see location.</string>
    <string name="name">Name</string>
    <string name="phone">phone</string>
    <string name="latitud">Latitud:</string>
    <string name="longitud">Longitud:</string>
    <string name="altitud">Altitud:</string>
    <string name="distancia_a_plaza_de_bolivar">Distancia a Plaza de Bolivar:</string>
    <string name="_0_0">0.0</string>
    <string name="ubicaciones_guardadas">Ubicaciones Guardadas</string>
    <string name="guardar">GUARDAR</string>
    <string name="imagen">Imagen</string>
    <string name="galeria">Galeria</string>
    <string name="camara">Camara</string>
</resources>
