<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/locationButton"
            android:layout_width="match_parent"
            android:layout_height="111dp"
            android:contentDescription="@string/button_to_see_location"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/location_pin" />

        <ImageButton
            android:id="@+id/cameraButton"
            android:layout_width="match_parent"
            android:layout_height="111dp"
            android:contentDescription="@string/button_to_take_picture"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/camera" />

        <ImageButton
            android:id="@+id/contactsButton"
            android:layout_width="match_parent"
            android:layout_height="101dp"
            android:contentDescription="@string/button_to_see_contacts"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/contacts" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>